# cubesat-lioness

./: .gitignore  .gitmodules  README.md
.github/workflows/: fsw-compile.yml
V4L2/: CMakeLists.txt  V4L2Camera.cpp  V4L2Camera.hpp  V4L2CameraBase.cpp  V4L2CameraBase.hpp  V4L2Device.hpp  toolchain-imx.cmake  v4l2base_tester.cpp  v4l2camera_tester.cpp
docs/: README.md
fsw/lioness-sw/: CMakeLists.txt  README.md  run-docker.sh  settings.ini
fsw/lioness-sw/.devcontainer/: Dockerfile
fsw/lioness-sw/FlatSat/: CMakeLists.txt  Main.cpp
fsw/lioness-sw/FlatSat/Top/: FlatSatPackets.fppi  FlatSatTopology.cpp  FlatSatTopology.hpp  FlatSatTopologyDefs.hpp  instances.fpp  topology.fpp
fsw/lioness-sw/LionessSw/: CMakeLists.txt
fsw/lioness-sw/LionessSw/ComCcsdsRoarFM/: CMakeLists.txt  ComCcsdsRoarFM.fpp  PingEntries.hpp  SubtopologyTopologyDefs.hpp
fsw/lioness-sw/LionessSw/Components/: CMakeLists.txt
fsw/lioness-sw/LionessSw/Components/ASIDetector/: ASIDetector.cpp  ASIDetector.fpp  ASIDetector.hpp  CMakeLists.txt
fsw/lioness-sw/LionessSw/Components/ASIDetector/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/Burnwire/: Burnwire.cpp  Burnwire.fpp  Burnwire.hpp  CMakeLists.txt
fsw/lioness-sw/LionessSw/Components/Burnwire/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/EPS_Sim/: CMakeLists.txt  EPS_Sim.cpp  EPS_Sim.fpp  EPS_Sim.hpp
fsw/lioness-sw/LionessSw/Components/EPS_Sim/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/ModeManager/: CMakeLists.txt  ModeManager.cpp  ModeManager.fpp  ModeManager.hpp
fsw/lioness-sw/LionessSw/Components/ModeManager/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/StarTracker/: CMakeLists.txt  StarTracker.cpp  StarTracker.fpp  StarTracker.hpp
fsw/lioness-sw/LionessSw/Components/StarTracker/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/SunSensor/: CMakeLists.txt  SunSensor.cpp  SunSensor.fpp  SunSensor.hpp
fsw/lioness-sw/LionessSw/Components/SunSensor/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/WatchdogEmulator/: CMakeLists.txt  WatchdogEmulator.cpp  WatchdogEmulator.fpp  WatchdogEmulator.hpp
fsw/lioness-sw/LionessSw/Components/WatchdogEmulator/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/camera/: CMakeLists.txt  Camera.template.cpp  Camera.template.hpp  camera.cpp  camera.fpp  camera.hpp
fsw/lioness-sw/LionessSw/Components/camera/docs/: sdd.md  sun_sensor_notes.md
fsw/lioness-sw/LionessSw/Components/fsw_watchdog/: CMakeLists.txt  fsw_watchdog.cpp  fsw_watchdog.fpp  fsw_watchdog.hpp
fsw/lioness-sw/LionessSw/Components/fsw_watchdog/docs/: sdd.md
fsw/lioness-sw/LionessSw/Components/startrackerHandler/: CMakeLists.txt  startrackerHandler.cpp  startrackerHandler.fpp  startrackerHandler.hpp
fsw/lioness-sw/LionessSw/Components/startrackerHandler/docs/: sdd.md
fsw/lioness-sw/LionessSw/FlatSat/: Main.cpp  README.md
fsw/lioness-sw/LionessSw/FlatSat/Top/: CMakeLists.txt  FlatSatTopology.cpp  FlatSatTopology.hpp  FlatSatTopologyDefs.hpp  instances.fpp  topology.fpp
fsw/lioness-sw/LionessSw/Ports/: CMakeLists.txt  GetMode.fpp  GetPicture.fpp  ModeEnum.fpp  SensorPorts.fpp
fsw/lioness-sw/LionessSw/configs/: CMakeLists.txt  ComCcsdsConfig.fpp
fsw/lioness-sw/cmake/platform/: imx8x.cmake
gsw/: README.md
gsw/emulators/: pico-generate.sh
gsw/emulators/blink/: CMakeLists.txt
test/: bad-code.c
test/libcamera-capture/: CMakeLists.txt  README.md  capture.cpp
test/star-tracker/: .gitignore  CMakeLists.txt  README.md  star_id.cpp  star_id.hpp  star_tracker_test.cpp
